[package]
name = "archiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = ">=0.4"
ureq = { version = ">=2", features = ["json"] }
rusqlite = ">=0.25"
warp = ">=0.3"
tokio = { version = ">=1", features = ["rt-multi-thread"] }
r2d2 = ">=0.8"
r2d2_sqlite = ">=0.20"
serde = { version = ">=1", features = ["derive"] }
serde_json = ">=1"
log = ">=0.4"
env_logger = ">=0.9"
toml = ">=0.5"
regex = ">=1"
