[package]
name = "cain"
version = "0.1.0"
edition = "2021"

[dependencies]
ureq = ">=2.5"
serde = { version = ">=1", features = ["derive"] }
serde_json = ">=1"
time = { version = ">=0.3", features = ["parsing", "formatting"] }
url = ">=2.3"
log = ">=0.4"
toml = ">=0.5"
quick-xml = { version = ">=0.26", features = ["serialize"] }
md-5 = ">=0.10"
clap = ">=4"

[dev-dependencies]
anyhow = ">=1"
tempfile = ">=3"
